# SimpleChart

./: .gitignore  CMakeLists.txt  Functions.cpp  Functions.hpp  Program.hpp  ProgramConstants.hpp  README.md  SelectFunction.cpp  SelectFunction.hpp  SimpleChart.cpp  SimpleChart.hpp  StateManager.hpp  VariablesHandler.cpp  VariablesHandler.hpp
cmake_modules/: FindSFML.cmake
content/fonts/dumb/: Tension Type Font License.txt
src/: Main.cpp  MainMenu.cpp  MainMenu.hpp  Program.cpp  Program.hpp  ProgramConstants.hpp  ProgramState.cpp  ProgramState.hpp  SelectFunction.cpp  SelectFunction.hpp  StateManager.cpp
src/Functions/: Functions.cpp  FuzzyLogicFunctions.cpp  FuzzyLogicFunctions.hpp
src/SimpleChart/: SimpleChart.cpp  SimpleChart.hpp  VariablesHandler.cpp  VariablesHandler.hpp
